# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: .brain_gcd.py.swn  .brain_gcd.py.swo  .brain_gcd.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
