[tool.poetry]
name = "hexlet-code"
version = "1.7.0"
description = ""
authors = ["Ilya <ilya.assanov.03@mail.ru>"]
readme = "README.md"
packages = [
{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
